<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SlideshowViewer"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/slideshowTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/displayOfPhotoSlideshow"
            android:layout_width="331dp"
            android:layout_height="249dp"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnToDisplay"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/previousPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/nextPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/photoTagsTitleSlideshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags_of_photo"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ListView
            android:id="@+id/tagsSlideshowListView"
            android:layout_width="wrap_content"
            android:layout_height="177dp" />
    </LinearLayout>

</LinearLayout>